# pluto_apps

dem_costmap_2d/: +  CMakeLists.txt  dem_costmap_2d_plugin.xml  package.xml  tmp_CMakeLists.txt
dem_costmap_2d/cfg/: DEMCostmap2D.cfg
dem_costmap_2d/include/dem_costmap_2d/: dem_costmap_2d.h
dem_costmap_2d/src/: dem_costmap_2d.cpp
map_odom_icp/: CMakeLists.txt  package.xml
map_odom_icp/cfg/: MapOdomIcp.cfg
map_odom_icp/include/: map_odom_icp.h  ros_pcl_icp.h
map_odom_icp/launch/: map_odom_icp.launch
map_odom_icp/src/: map_odom_icp.cpp  ros_pcl_icp.cpp
organized_point_normals/: CMakeLists.txt  package.xml
organized_point_normals/cfg/: OrganizedPointNormals.cfg
organized_point_normals/include/organized_point_normals/: organized_point_normals.h
organized_point_normals/launch/: organized_point_normals.launch  organized_point_normals_velodyne.launch
organized_point_normals/src/: organized_point_normals.cpp
pluto_apps/: CMakeLists.txt  package.xml
pluto_bags/: .gitignore  CMakeLists.txt  filter_bags.py  package.xml
pluto_bags/launch/: bag.launch
pluto_navigation/: CMakeLists.txt  package.xml
pluto_navigation/launch/: dem_navigation.launch  localization.launch  navigation.launch
