<?xml version="1.0"?>
<package>
  <name>organized_point_normals</name>
  <version>1.0.0</version>
  <description>The organized_point_normals package calculates point normals for organized point clouds</description>

  <maintainer email="spuetz@uni-osnabrueck.de">Sebastian Pütz</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/pluto_apps/organized_point_normals</url>
  <author email="spuetz@uni-osnabrueck.de">Sebastian</author>

  <build_depend>roscpp</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  
  <buildtool_depend>catkin</buildtool_depend>

</package>
