<?xml version="1.0"?>
<package>
  <name>pluto_apps</name>
  <version>0.0.0</version>
  <description>The pluto_apps package</description>

  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/pluto_apps</url>
  <author email="spuetz@uos.de">Sebastian Pütz</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <metapackage/>
  </export>
</package>
